# advent_of_code_2021

./: .gitignore  .gitmodules  README.md
Omay238-html/: README.md  index.html  style.css
aelg-haskell/: day1.hs  day10.hs  day1a.hs  day1b.hs  day2.hs  day2a.hs  day2b.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs  template.hs  useful.hs
alextelon-python/: README.md
cernael-python/: 10a.py  10b.py  11a.py  11b.py  12a.py  12b.py  1a.py  1b.py  2a.py  2b.py  3a.py  3b.py  4a.py  4b.py  5a.py  5b.py  6a.py  6b.py  7a.py  7b.py  8a.py  8b.py  9a.py  9b.py  init
erik-rosengren-rust/: .gitignore  Cargo.toml
erik-rosengren-rust/runner/: Cargo.toml
erik-rosengren-rust/runner/src/: lib.rs
estomagordo-python/: .gitignore  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  1a.py  1b.py  2.txt  20.txt  21.txt  22.txt  24.txt  25.txt  2a.py  2b.py  3.txt  3a.py  3b.py  4.txt  4a.py  4b.py  5.txt  5a.py  5b.py  7.txt  8.txt  9.txt  day10a.py  day10b.py  day11a.py  day11b.py  day12a.py  day12b.py  (+48 more)
f00ale-cpp/: CMakeLists.txt
f00ale-cpp/data/: a01.txt  a02.txt  a03.txt  a04.txt  a05.txt  a06.txt  a07.txt  a08.txt  a09.txt  a10.txt  a11.txt  a12.txt  a13.txt  a14.txt  a15.txt  a16.txt  a17.txt  a18.txt  a19.txt  a20.txt  a21.txt  a22.txt  a23.txt  a24.txt  a25.txt  p03.txt  p04.txt  p05.txt  p07.txt  p08.txt  p09.txt  p10.txt  p11.txt  p12.txt  p13.txt  p14.txt  p15.txt  p16.txt  p17.txt  p18.txt  (+7 more)
f00ale-cpp/src/: main.cpp  p01.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p06.cpp  p07.cpp  p08.cpp  p09.cpp  p10.cpp  p11.cpp  p12.cpp  p13.cpp  p14.cpp  p15.cpp  p16.cpp  p17.cpp  p18.cpp  p19.cpp  p20.cpp  p21.cpp  p22.cpp  p23.cpp  p24.cpp  p25.cpp
fronkan-python/: aoc_create.py  requirements.txt
jakiwar-julia/: .gitignore
jakiwar-qlik/: readme.md
jakobruhe-python/: day01.py  day02.py  day06.py  day07.py  day10.py  day12.py  day14.py  day20.py  day21.py
joelfak-python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day09.py  helpfunctions.py  template.py
jofafrazze-csharp/: .gitignore  AdventOfCode.cs  AoC2021.sln
johnste-rust/: README.md
meconer-dart/: day12.dart  day14.dart  day16.dart  day2.dart  day23.dart  day24.dart  day24.py  day25.dart  day3.dart  day4.dart  day5.dart  day7.dart  main.dart
samuelselleck-rust/: README.md
tartarus-git-c++/: puzzle.h
zhangjunyan2580-cpp/: day10_1.cpp  day10_2.cpp  day11_1.cpp  day11_2.cpp  day12_1.cpp  day12_2.cpp  day13_1.cpp  day13_2.cpp  day14_1.cpp  day14_2.cpp  day15_1.cpp  day15_2.cpp  day16_1.cpp  (+35 more)
(+226 files in other folders)
